syntax = "proto3";

package user;

option go_package = "./pb";

message User{
    uint32 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
}

message UsersRes{
    repeated User users = 1;
}

message UsersReq{}

service UserHandler{
    rpc GetAllUsers (UsersReq) returns (UsersRes);
}
